Fix spacing.

--- a/src/components/card-checkbox-group/CardCheckbox.css
+++ b/src/components/card-checkbox-group/CardCheckbox.css
@@ -1,4 +1,6 @@
 .cardCheckbox__image{
+    width: 8rem;
+    height: 8rem;
     max-width: 100%;
     display: block;
     vertical-align: middle;
